# distributed-splitwise

./: README.md  docker-compose.yaml
gateway-service/: .air.toml  .env.template  .gitignore  Dockerfile  entrypoint.sh  go.mod
gateway-service/cmd/gateway/: main.go
gateway-service/internal/auth/: jwt.go  middleware.go
gateway-service/internal/config/: config.go
gateway-service/internal/proxy/: reverse_proxy.go
identity-service/: .env.template  Dockerfile  entrypoint.sh  pyproject.toml
identity-service/migrations/: env.py
identity-service/migrations/versions/: fbe1446c8968_add_users_talbe.py
identity-service/src/: main.py
identity-service/src/api/: dependencies.py
identity-service/src/api/v1/: __init__.py  auth.py  user.py
identity-service/src/authentication/: exceptions.py  schemas.py  service.py
identity-service/src/core/: config.py  exceptions.py  jwt.py  password.py  postgres.py
identity-service/src/users/: exceptions.py  models.py  repository.py  schemas.py  services.py
requests-service/: .air.toml  .env.template  Dockerfile.dev  Dockerfile.prod  Makefile  entrypoint.sh  go.mod  go.sum
requests-service/cmd/api/: main.go
requests-service/internal/auth/: middleware.go
requests-service/migrations/: 20260304153439_add_requests_table.sql
splitwise-worker/: .env.template  Dockerfile  pyproject.toml
splitwise-worker/src/: main.py  worker.py
splitwise-worker/src/core/: config.py  logger.py  postgres.py
splitwise-worker/src/core/aws/: base.py  s3.py  sqs.py
splitwise-worker/src/service/: process_splitwise.py  splitwise_processor.py
(+17 files in other folders)
